[gd_scene load_steps=26 format=3 uid="uid://t1x7kpfxcf55"]

[ext_resource type="Script" path="res://scripts/isabel.gd" id="1_gkmp1"]
[ext_resource type="PackedScene" uid="uid://dhk0g36gy746v" path="res://scenes/arrow.tscn" id="2_lhi81"]
[ext_resource type="Texture2D" uid="uid://t41ke1mhifia" path="res://sprites/Archer_Purlple.png" id="2_xf4go"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q5xnw"]
atlas = ExtResource("2_xf4go")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bojw0"]
atlas = ExtResource("2_xf4go")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew0gk"]
atlas = ExtResource("2_xf4go")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1s21"]
atlas = ExtResource("2_xf4go")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqbhy"]
atlas = ExtResource("2_xf4go")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgnqs"]
atlas = ExtResource("2_xf4go")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkc0y"]
atlas = ExtResource("2_xf4go")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gevrx"]
atlas = ExtResource("2_xf4go")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh4gu"]
atlas = ExtResource("2_xf4go")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dul6n"]
atlas = ExtResource("2_xf4go")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bpf0"]
atlas = ExtResource("2_xf4go")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lkla"]
atlas = ExtResource("2_xf4go")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ji01"]
atlas = ExtResource("2_xf4go")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wck7u"]
atlas = ExtResource("2_xf4go")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_40v2b"]
atlas = ExtResource("2_xf4go")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjord"]
atlas = ExtResource("2_xf4go")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8wbq"]
atlas = ExtResource("2_xf4go")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_p168h"]
atlas = ExtResource("2_xf4go")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynpeh"]
atlas = ExtResource("2_xf4go")
region = Rect2(1152, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xfpa"]
atlas = ExtResource("2_xf4go")
region = Rect2(1344, 576, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_yln6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5xnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bojw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew0gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1s21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqbhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgnqs")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkc0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gevrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh4gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dul6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bpf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lkla")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ji01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wck7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40v2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjord")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8wbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p168h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynpeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xfpa")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78yum"]
size = Vector2(47, 69)

[node name="Isabel" type="CharacterBody2D"]
script = ExtResource("1_gkmp1")
arrowPrefab = ExtResource("2_lhi81")

[node name="IsabelSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yln6f")
animation = &"shoot"
frame = 7
frame_progress = 1.0

[node name="IsabelCollision" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, -2.5)
shape = SubResource("RectangleShape2D_78yum")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
